# iam-engine

./: .gitignore  .gitsubmodules  CMakeLists.txt  README.md  TODO.md  _config.yml  index.md  vcpkg.json
DescentLike/: AAsteroid.hpp  AEnemy.cpp  AEnemy.hpp  DLGame.cpp  DLGame.hpp  DLScene1.cpp  DLScene1.hpp  DescentLike.cpp  ParticlesSample.cpp  ParticlesSample.hpp
DescentLike/resources/models/: asteroid.fbx  asteroid2.fbx  papership.mtl
DescentLike/resources/scenes/: icosphere.fbx  lvl_station-noised2.gltf  lvl_station.json  lvl_station2-voxel.fbx  lvl_station2.fbx
DescentLike/resources/shaders/: Particles.comp.glsl  Particles.frag.glsl  Particles.vert.glsl
Engine/: AActor.cpp  AActor.hpp  AComp.hpp  AComponent.cpp  AComponent.hpp  ACube.cpp  ACube.hpp  ASystem.hpp  Actor.cpp  Actor.hpp  BoxGeo.cpp  Camera.hpp  Ctx.hpp  DebugTimer.hpp  Engine.cpp  Engine.hpp  GUI.cpp  GUI.hpp  Game.cpp  Game.hpp  Geo.hpp  GunComp.cpp  GunComp.hpp  HealthComp.cpp  HealthComp.hpp  IEngine.hpp  ILifecycle.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  MeshComponent.cpp  MeshComponent.hpp  MovementCtrl.cpp  MovementCtrl.hpp  Object3D.cpp  Object3D.hpp  PhongShader.hpp  Physics.cpp  Physics.hpp  PhysicsComp.cpp  (+30 more)
Engine/ACS/: AActor.cpp  AActor.hpp  AActorBase.hpp  AComp.cpp  AComp.hpp  AComponent.cpp  AComponent.hpp  AMaestro.cpp  AMaestro.hpp  ASystem.hpp
Engine/Graphic/: BoxGeo.hpp  Geo.cpp  PhongShader.hpp  Shader.cpp  Window.cpp  Window.hpp  WireframeShader.hpp
Engine/Graphics/: AssetStore.cpp  AssetStore.hpp  BoundingBox.hpp  BoxGeo.cpp  BoxGeo.hpp  Frustrum.hpp  Geo.cpp  Geo.hpp  GeoAttr.hpp  Image.hpp  InstancedMeshComp.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshComp.cpp  MeshComp.hpp  MeshComponent.hpp  MeshModelComp.cpp  MeshModelComp.hpp  MeshStorage.cpp  MeshStorage.hpp  ModelData.hpp  PhongMaterial.hpp  PhongShader.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.hpp  Uniforms.hpp  Window.cpp  Window.hpp  WireframeShader.hpp  __MeshModelComp.cpp
Engine/Inputs/: Inputs.cpp  Inputs.hpp
Engine/Physics/: CollisionDispatcher.hpp  Collisions.hpp  ContactCallback.cpp  ContactCallback.hpp  ContactResult.hpp  DebugDraw.hpp  DebugDrawMeshComp.cpp  DebugDrawMeshComp.hpp  DebugDrawMeshComponent.cpp  DebugDrawMeshComponent.hpp  Physics.cpp  Physics.hpp  PhysicsComp.cpp  PhysicsComp.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  Ray.cpp  Ray.hpp  vec3.hpp
Engine/common/: LOG.hpp  MACRO.hpp  file.hpp  id.hpp  incrementTrailingDigits.hpp  json-preprocess.hpp  json.hpp  math.hpp  memory.hpp  random.hpp  screenToWorld.hpp
Engine/resources/shaders/: phong.frag.glsl  pos-norm.vert.glsl
HelloWorld/: ACube.cpp  ACube.hpp  Cube.cpp  Cube.hpp  HWLevel.cpp  HWLevel.hpp  HWObject.cpp  HWObject.hpp  HWPlayer.cpp  HWPlayer.hpp  HWScene.cpp  HWScene.hpp  HelloWorld.cpp
LoadScene/: AEnemy.cpp  AEnemy.hpp  LoadScene.cpp  MyGame.cpp  MyGame.hpp  MyScene.cpp  MyScene.hpp
resources/models/: 2tris.mtl  lvl_box.mtl  lvl_station.fbx  lvl_station.mtl  torus.gltf
resources/scenes/: box.json  hw.scene.json  lvl_station.json  scene.json  tmp.json
resources/shaders/: phong.frag.glsl  pos-norm.vert.glsl
shaders/: const-norm.frag.glsl  const.frag.glsl  pos-norm.vert.glsl
util/: LOG.hpp  MACRO.hpp  Symbol.cpp  Symbol.hpp  file.hpp  math.hpp  random.hpp  slerp.hpp
